--- a/_posts/2018-12-13-test-43.md
+++ b/_posts/2018-12-13-test-43.md
@@ -9,13 +9,17 @@ published: true
 post_date: 2018-12-13 19:39:22
 ---
 <!-- wp:paragraph -->
-<p>one two three</p>
+one two three
 <!-- /wp:paragraph -->
 
 <!-- wp:heading -->
+
 <h2>fdsfdsfsdfdsfds</h2>
+
 <!-- /wp:heading -->
 
 <!-- wp:list -->
+
 <ul><li>one</li><li>two</li><li>three</li></ul>
+
 <!-- /wp:list -->
